[project]
name = "comfyblockout"
description = "3D Editor Node — build a blockout scene (primitives, GLB, splats), record a camera path, and feed the rendered video + image + prompt into Seedance / Nano Banana / Flux / any downstream model."
version = "0.1.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/spiritform/comfyblockout"

[tool.comfy]
PublisherId = "spiritform"
DisplayName = "ComfyBlockout"
Icon = ""
